Version 2.02.51 - 
================================
  Add libdevmapper functions to support synchronisation with udev.
  Added configure --enable-udev_rules --enable-udev_sync.
  Added configure --with-udev-prefix --with-udevdir.
  Added udev dir to hold udev rules.
  Add --dataalignmentoffset to pvcreate to shift start of aligned data area.
  Fix _mda_setup() to not check first mda's size before pe_align rounding.
  Document -I option of clvmd in the man page.
  Fix configure script to handle multiple clvmd selections.
  Fix lvm2app.pc installation filename.
  Remove pv_t, vg_t & lv_t handles from lib.  Only liblvm uses them.
  Rename lvm.h to lvm2app.h for now.

Version 2.02.50 - 28th July 2009
================================
  Change test/api/test.c prompt so it's not confused with the main lvm prompt.
  Update liblvm unit tests in test/api to cover latest liblvm changes.
  Add unimplemented lvm_lv_resize and lvm_pv_resize skeletons to liblvm.
  Add lvm_library_get_version to liblvm.
  Add lvm_config_override to liblvm to allow caller to override LVM config.
  Add lvm_lv_is_active and lvm_lv_is_suspended to liblvm.
  Add lvm_lv_activate and lvm_lv_deactivate to liblvm.
  Add lvm_scan, lvm_vg_reduce and lvm_vg_remove_lv to liblvm.
  Add functions to get numeric properties to liblvm.
  Add lvm_{pv|vg|lv}_get_{name|uuid} to liblvm.
  Add lvm_vg_list_pvs and lvm_vg_list_lvs to liblvm.
  Add lvm_vg_open and lvm_vg_create_lv_linear to liblvm.
  Add lvm_list_vg_names/uuids to liblvm.
  Add lvm_errno and lvm_errmsg to liblvm to obtain failure information.
  Rename lvm_create/destroy to lvm_init/quit.
  Rename lvm_reload_config to lvm_config_reload.
  Refactor _override_settings to use new override_config_tree_from_string.
  Add vg_reduce to metadata.c and metadata-exported.h.
  Update lvm.h to clarify API behavior and return codes.
  Update lvm_vg_extend to do an implicit pvcreate on the device.