@@ -1018,7 +1018,7 @@ int dm_cookie_supported(void);
  */
 void dm_udev_set_sync_support(int sync_with_udev);
 int dm_udev_get_sync_support(void);
-int dm_udev_notify(uint32_t cookie);
+int dm_udev_complete(uint32_t cookie);
 int dm_udev_wait(uint32_t cookie);
 int dm_udev_cleanup(uint32_t cookie);
 
