@@ -64,6 +64,9 @@ dmsetup \- low level logical volume management
 .B dmsetup mknodes
 .I [device_name]
 .br
+.B dmsetup udevcomplete
+.I cookie
+.br
 .B dmsetup targets
 .br
 .B dmsetup version
@@ -108,6 +111,9 @@ Tell the kernel not to supply the open reference count for the device.
 .IP \fB--notable
 .br
 When creating a device, don't load any table.
+.IP \fB--noudevsync
+Do not synchronise with udev when creating, renaming or removing devices.
+.br
 .IP \fB-o|--options
 .br
 Specify which fields to display.
@@ -280,6 +286,11 @@ is displayed.
 .IP \fBtargets
 .br
 Displays the names and versions of the currently-loaded targets.
+.IP \fBudevcomplete
+.I cookie
+.br
+Wake any processes that are waiting for udev to complete processing the specified cookie.
+.br
 .IP \fBversion
 .br
 Outputs version information.
